--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ group 'MoneyTransfers'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
@@ -18,9 +19,10 @@ dependencies {
 
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.29.1'
     compile 'org.glassfish.jersey.inject:jersey-hk2:2.29.1'
+    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.29.1'
 
     testCompile 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
-    testcompile 'org.hamcrest:hamcrest:2.2'
+    testCompile 'org.hamcrest:hamcrest:2.2'
 
-    //compile 'javax.xml.bind:jaxb-api:2.3.1'
+    compile 'javax.xml.bind:jaxb-api:2.3.1'
 }
